added responsive twitter bootstrap to project

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,9 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+  .row
+    .span12
+      h1= title
+  .row
+    .span12
+      p Welcome to #{title}
