--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,5 +3,9 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='/libs/bootstrap/css/bootstrap.min.css')
+    link(rel='stylesheet', href='/libs/bootstrap/css/bootstrap-responsive.min.css')
+    script(type='text/javascript', href='/libs/bootstrap/js/bootstrap.min.js')
   body
-    block content
+    div(class="container")
+      block content
