Fixed a typo in stylesheet.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,2 @@
-body {
-  background-color: #f00;
-}
-body{padding:50px;font:14px "Lucida Grande",Helvetica,Arial,sans-serif}
+body{background-color:#f00;padding:50px;font:14px "Lucida Grande",Helvetica,Arial,sans-serif}
 a{color:#00b7ff}
