updated base UI

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,2 +1,2 @@
-body{background-color:#fff;padding:50px;font:14px "Lucida Grande",Helvetica,Arial,sans-serif}
+body{background-color:#fff;padding-top:80px;font:14px "Lucida Grande",Helvetica,Arial,sans-serif}
 a{color:#00b7ff}
