--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -1,6 +1,6 @@
 body {
   background-color: #ffffff;
-  padding: 50px;
+  padding-top: 80px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
