--- a/views/index.jade
+++ b/views/index.jade
@@ -3,7 +3,6 @@ extends layout
 block content
   .row
     .span12
-      h1= title
-  .row
-    .span12
-      p Welcome to #{title}
+      h1= "What is your Question?"
+
+      
