--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,10 +2,28 @@ doctype 5
 html
   head
     title= title
+    meta(charset='utf-8')
+    meta(name='viewport', content='device-width, initial-scale=1.0')
     link(rel='stylesheet', href='/libs/bootstrap/css/bootstrap.min.css')
     link(rel='stylesheet', href='/libs/bootstrap/css/bootstrap-responsive.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
     script(type='text/javascript', href='/libs/bootstrap/js/bootstrap.min.js')
   body
+
+    div(class="navbar navbar-inverse navbar-fixed-top")
+      div(class="navbar-inner")
+        div(class="container")
+          a(class="btn btn-navbar", data-toggle="collapse", data-target=".nav-collapse")
+            span(class="icon-bar")
+            span(class="icon-bar")
+            span(class="icon-bar")
+          a(class="brand", href="#")
+            = "Poll App"
+          div(class="nav-collapse collapse")
+            ul(class="nav pull-right")
+              li(class="active")
+                a(href='#')
+                  = "Home"
+
     div(class="container")
       block content
