updated homepage UI and layout

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -1,9 +1,25 @@
 body {
   background-color: #ffffff;
-  padding-top: 80px;
+  padding-top: 20px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
 a {
   color: #00B7FF;
+}
+
+/* Custom container */
+.container-narrow {
+  margin: 0 auto;
+  max-width: 700px;
+}
+
+/* Ask a question styles */
+.ask-question {
+  text-align: center;
+
+  h1 {
+    font-size: 72px;
+    line-height: 1;
+  }
 }
