--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,2 +1,5 @@
-body{background-color:#fff;padding-top:80px;font:14px "Lucida Grande",Helvetica,Arial,sans-serif}
+body{background-color:#fff;padding-top:20px;font:14px "Lucida Grande",Helvetica,Arial,sans-serif}
 a{color:#00b7ff}
+.container-narrow{margin:0 auto;max-width:700px}
+.ask-question{text-align:center;}
+.ask-question h1{font-size:72px;line-height:1}
