--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,20 +10,15 @@ html
     script(type='text/javascript', href='/libs/bootstrap/js/bootstrap.min.js')
   body
 
-    div(class="navbar navbar-inverse navbar-fixed-top")
-      div(class="navbar-inner")
-        div(class="container")
-          a(class="btn btn-navbar", data-toggle="collapse", data-target=".nav-collapse")
-            span(class="icon-bar")
-            span(class="icon-bar")
-            span(class="icon-bar")
-          a(class="brand", href="#")
-            = "Poll App"
-          div(class="nav-collapse collapse")
-            ul(class="nav pull-right")
-              li(class="active")
-                a(href='#')
-                  = "Home"
+    div(class="container-narrow")
+      div(class="masthead")
+        ul(class="nav nav-pills pull-right")
+          li(class="active")
+            a(href="#")
+              = "Home"
+        h3(class="muted")
+          = "Poll App"
+      hr
 
     div(class="container")
       block content
