Added question mark to question if last character is not a ?.  Added questions list page.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -14,7 +14,7 @@ html
       div(class="masthead")
         ul(class="nav nav-pills pull-right")
           li(class="active")
-            a(href="#")
+            a(href="/")
               = "Home"
         h3(class="muted")
           = "Poll App"
