basic client side framework, commit for openlayer reorg.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,6 +8,8 @@ html
     link(rel='stylesheet', href='/libs/bootstrap/css/bootstrap-responsive.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
     script(type='text/javascript', href='/libs/bootstrap/js/bootstrap.min.js')
+    block head
+
   body
 
     div(class="container-narrow")
