--- a/views/map/show.jade
+++ b/views/map/show.jade
@@ -1,8 +1,9 @@
 extends ../layout
 
 block head
-  script(src='/libs/openlayers/lib/OpenLayers.js')
+  script(src='/libs/openlayers/build/ol.js')
   script(src='/js/map.js')
+  link(rel='stylesheet', href='/libs/openlayers/build/ol.css', type='text/css')
 
 block content
   .row
