Basic working model for location based voting has been implemented.

--- a/views/results/show.jade
+++ b/views/results/show.jade
@@ -10,4 +10,4 @@ block content
       ul
         each answer in answers
           li
-            = answer.value
+            = answer.value + "(" + answer.latitude + ", " + answer.longitude + ")"
