--- a/views/shared/_notices.jade
+++ b/views/shared/_notices.jade
@@ -1,6 +1,6 @@
-- if (typeof notice != 'undefined')
+- if (typeof notice != 'undefined' && notice != '')
   .alert.alert-success
     = notice
-- if (typeof error != 'undefined')
+- if (typeof error != 'undefined' && error != '')
   .alert.alert-error
     = error
