Added view for no location.

--- a/views/questions/location.jade
+++ b/views/questions/location.jade
@@ -32,7 +32,7 @@ block content
             }
           },
           error: function(jqXHR, textStatus, errorThrown) {
-            alert('Failed to use this');
+            window.location = "/no_locations";
           }
         });
       };
