Some refactoring of how coordinates are saved in preparation for clustering.

--- a/views/results/show.jade
+++ b/views/results/show.jade
@@ -10,4 +10,4 @@ block content
       ul
         each answer in answers
           li
-            = answer.value + "(" + answer.latitude + ", " + answer.longitude + ")"
+            = answer.value + "(" + answer.coordinates[0] + ", " + answer.coordinates[1] + ")"
