--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,10 @@
 body{background-color:#fff;padding-top:20px;font:14px "Lucida Grande",Helvetica,Arial,sans-serif}
 a{color:#00b7ff}
 .container-narrow{margin:0 auto;max-width:700px}
-.ask-question{text-align:center;}
-.ask-question h1{font-size:72px;line-height:1}
+.ask-question{text-align:center}
+h1{font-size:72px;line-height:1}
 #map{height:500px}
+ul.answer_graph{margin:0;padding:0;position:relative}
+ul.answer_graph li{margin:0;padding:0;list-style-type:none;position:absolute}
+ul.answer_graph li.yes{left:0}
+ul.answer_graph li.no{right:0;text-align:right}
