--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -4,26 +4,40 @@ body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
-a {
-  color: #00B7FF;
-}
+a
+  color: #00B7FF
 
 /* Custom container */
-.container-narrow {
-  margin: 0 auto;
-  max-width: 700px;
-}
+.container-narrow
+  margin: 0 auto
+  max-width: 700px
 
 /* Ask a question styles */
-.ask-question {
-  text-align: center;
+.ask-question
+  text-align: center
 
-  h1 {
-    font-size: 72px;
-    line-height: 1;
-  }
-}
+h1
+  font-size: 72px
+  line-height: 1
 
-#map {
-	height:500px;
-}
+#map
+	height:500px
+
+ul.answer_graph
+  margin: 0
+  padding: 0
+  position: relative
+  
+
+ul.answer_graph li
+  margin: 0
+  padding: 0
+  list-style-type: none
+  position: absolute
+  
+ul.answer_graph li.yes
+  left: 0
+  
+ul.answer_graph li.no
+  right: 0
+  text-align:right
