adding colors for graph

--- a/views/results/show.jade
+++ b/views/results/show.jade
@@ -7,7 +7,7 @@ block content
       h1= question.value
       ul(class="answer_graph")
         li(style="width:" + yesWidth + "%;", class="answers yes")
-          h2= 'Yes Answers (' + yesWidth + ')'
+          h2= 'Yes (' + yesWidth + ')'
         li(style="width:" + noWidth + "%;", class="answers no")
-          h2= 'No Results (' + noWidth + ')'
+          h2= 'No (' + noWidth + ')'
 
