--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,5 +6,8 @@ h1{font-size:72px;line-height:1}
 #map{height:500px}
 ul.answer_graph{margin:0;padding:0;position:relative}
 ul.answer_graph li{margin:0;padding:0;list-style-type:none;position:absolute}
+ul.answer_graph li h2{padding:.5em}
 ul.answer_graph li.yes{left:0}
 ul.answer_graph li.no{right:0;text-align:right}
+li.no h2{background:#c92235;color:#fff}
+li.yes h2{background:#a1cf32}
