--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -1,3 +1,6 @@
+pollapp_red = #c92235
+pollapp_green = #a1cf32
+
 body {
   background-color: #ffffff;
   padding-top: 20px;
@@ -35,9 +38,21 @@ ul.answer_graph li
   list-style-type: none
   position: absolute
   
+ul.answer_graph li h2
+  padding: .5em
+  
 ul.answer_graph li.yes
   left: 0
   
 ul.answer_graph li.no
   right: 0
   text-align:right
+  
+li.no h2
+  background: pollapp_red
+  color: white
+
+li.yes h2
+  background: pollapp_green
+  
+
