--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -1,11 +1,11 @@
+/* Color & style constants */
 pollapp_red = #c92235
 pollapp_green = #a1cf32
 
-body {
-  background-color: #ffffff;
-  padding-top: 20px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-}
+body
+  background-color: #ffffff
+  padding-top: 20px
+  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif
 
 a
   color: #00B7FF
@@ -14,6 +14,7 @@ a
 .container-narrow
   margin: 0 auto
   max-width: 700px
+
 
 /* Ask a question styles */
 .ask-question
@@ -26,11 +27,12 @@ h1
 #map
 	height:500px
 
+  
+/* Results graph */
 ul.answer_graph
   margin: 0
   padding: 0
   position: relative
-  
 
 ul.answer_graph li
   margin: 0
