--- a/views/layout.jade
+++ b/views/layout.jade
@@ -13,7 +13,7 @@ html
 
   body
 
-    div(class="container-narrow")
+    div(class="container")
       div(class="masthead")
         ul(class="nav nav-pills pull-right")
           li(class="active")
