changed error message for when user doesn't have location available

--- a/views/questions/location.jade
+++ b/views/questions/location.jade
@@ -58,7 +58,7 @@ block content
         if (navigator && navigator.geolocation) {
           navigator.geolocation.getCurrentPosition(onSuccessfulPosition, onFailedPosition, {timeout: 10000 });
         } else {
-          onFailedPosition();  
+          window.location = "/failed_location";
         }
       });
     })($);
