--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -10,6 +10,15 @@ body
 a
   color: #00B7FF
 
+
+/* Forms */
+
+form#question_ask input.question
+  font-size: 2em
+  padding: 0.286em
+  margin: 0.286em /*4px*/
+
+
 /* Custom container */
 .container-narrow
   margin: 0 auto
