--- a/views/index.jade
+++ b/views/index.jade
@@ -5,8 +5,8 @@ block content
   div(class="ask-question")
     h1= "What is your Question?"
 
-    form(name="question", action="/questions", method="post")
-      input(type="name", name="question", class="span8")
+    form(name="question", action="/questions", method="post", id="question_ask")
+      input(type="name", name="question", class="span8 question")
       span(class="help-block")
         = "Must be a yes or no question"
       p
