adding trending questions link to menu

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -19,6 +19,8 @@ html
           li(class="active")
             a(href="/")
               = "Home"
+          li
+            a(href="/questions") Trending Questions
         h3(class="muted")
           = "Poll App"
       hr
