--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -12,7 +12,6 @@ a
 
 
 /* Forms */
-
 form#question_ask input.question
   font-size: 2em
   padding: 0.286em
@@ -30,7 +29,7 @@ form#question_ask input.question
   text-align: center
 
 h1
-  font-size: 72px
+  font-size: 3em /*52px*/
   line-height: 1
 
 #map
