--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -4,25 +4,22 @@ pollapp_green = #a1cf32
 
 body
   background-color: #ffffff
-  padding-top: 20px
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif
 
 a
   color: #00B7FF
 
-/* Custom container */
-.container-narrow
-  margin: 0 auto
-  max-width: 700px
-
+/* Top Navbar style */
+.navbar 
+  .brand
+    color: #ffffff
 
 /* Ask a question styles */
 .ask-question
   text-align: center
 
-h1
-  font-size: 72px
-  line-height: 1
+  h1
+    font-size: 72px
+    line-height: 1
 
 #map
 	height:500px
