Changed header text again

--- a/views/questions/index.jade
+++ b/views/questions/index.jade
@@ -4,7 +4,7 @@ block content
 
   div(class="row")
     div(class="span12")
-      h1= "Recent Questions"
+      h1= "Recently asked questions"
 
       ul
         each question in questions
