Changed the app name.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -24,7 +24,7 @@ html
             span.icon-bar
             span.icon-bar
           a.brand() 
-            = "Where's Your Poll at?"
+            = "Vote In Public"
           .nav-collapse.collapse
             ul.nav.pull-right
               li.active
