Have top left link home

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -23,7 +23,7 @@ html
             span.icon-bar
             span.icon-bar
             span.icon-bar
-          a.brand() 
+          a.brand(href='/') 
             = "Vote In Public"
           .nav-collapse.collapse
             ul.nav.pull-right
