--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -61,3 +61,71 @@ li.yes h2
   background: pollapp_green
   
 
+.ask-question {
+  text-align: center;
+
+  h1 {
+    font-size: 72px;
+    line-height: 1;
+  }
+}
+
+#map {
+	height:500px;
+}
+
+.overlay {
+	display: none;
+	font-size: 10pt;
+}
+
+.ol-overlaycontainer .overlay {
+	display: block;
+}
+#vienna {
+	text-decoration: none;
+	color: white;
+	font-size: 11pt;
+	font-weight: bold;
+	text-shadow: black 0.1em 0.1em 0.2em;
+}
+#popup {
+	width: 200px;
+	margin-left: -107px;
+	margin-bottom: 12px;
+	border-radius: 5px;
+	padding: 5px;
+}
+
+
+/* Popup CSS generated with http://cssarrowplease.com/ */
+
+.arrow_box {
+	position: relative;
+	background: #88b7d5;
+	border: 2px solid #c2e1f5;
+}
+.arrow_box:after, .arrow_box:before {
+	top: 100%;
+	border: solid transparent;
+	content: " ";
+	height: 0;
+	width: 0;
+	position: absolute;
+	pointer-events: none;
+}
+
+.arrow_box:after {
+	border-color: rgba(136, 183, 213, 0);
+	border-top-color: #88b7d5;
+	border-width: 10px;
+	left: 50%;
+	margin-left: -10px;
+}
+.arrow_box:before {
+	border-color: rgba(194, 225, 245, 0);
+	border-top-color: #c2e1f5;
+	border-width: 13px;
+	left: 50%;
+	margin-left: -13px;
+}
