--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,10 @@
 body{background-color:#fff}
 a{color:#00b7ff}
+.navbar.navbar-inverse .navbar-inner{background:-webkit-gradient(linear, left top, left bottom, color-stop(0, #2555a5), color-stop(1, #224e98));background:-webkit-linear-gradient(top, #2555a5 0%, #224e98 100%);background:-moz-linear-gradient(top, #2555a5 0%, #224e98 100%);background:-o-linear-gradient(top, #2555a5 0%, #224e98 100%);background:-ms-linear-gradient(top, #2555a5 0%, #224e98 100%);background:linear-gradient(top, #2555a5 0%, #224e98 100%)}
+.navbar.navbar-inverse .brand{color:#fff}
+.navbar.navbar-inverse .nav li a{color:#bdcae0;}
+.navbar.navbar-inverse .nav li a:hover{color:#fff}
+.navbar.navbar-inverse .nav li.active a{background-color:#204a90}
 .navbar .brand{color:#fff}
 form#question_ask input.question{font-size:2em;padding:.286em;margin:.286em;}
 .ask-question{text-align:center}
@@ -12,6 +17,9 @@ ul.answer_graph li.yes{left:0}
 ul.answer_graph li.no{right:0;text-align:right}
 li.no h2{background:#c92235;color:#fff}
 li.yes h2{background:#a1cf32}
+.ask-question{text-align:center;}
+.ask-question h1{font-size:72px;line-height:1}
+#map{height:500px}
 .overlay{display:none;font-size:10pt}
 .ol-overlaycontainer .overlay{display:block}
 #vienna{text-decoration:none;color:#fff;font-size:11pt;font-weight:bold;text-shadow:#000 .1em .1em .2em}
