--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,9 +2,11 @@ body{background-color:#fff}
 a{color:#00b7ff}
 .navbar.navbar-inverse .navbar-inner{background:-webkit-gradient(linear, left top, left bottom, color-stop(0, #2555a5), color-stop(1, #224e98));background:-webkit-linear-gradient(top, #2555a5 0%, #224e98 100%);background:-moz-linear-gradient(top, #2555a5 0%, #224e98 100%);background:-o-linear-gradient(top, #2555a5 0%, #224e98 100%);background:-ms-linear-gradient(top, #2555a5 0%, #224e98 100%);background:linear-gradient(top, #2555a5 0%, #224e98 100%)}
 .navbar.navbar-inverse .brand{color:#fff}
-.navbar.navbar-inverse .nav li a{color:#bdcae0;}
-.navbar.navbar-inverse .nav li a:hover{color:#fff}
-.navbar.navbar-inverse .nav li.active a{background-color:#204a90}
+.navbar.navbar-inverse .nav-collapse .nav li a{color:#bdcae0;}
+.navbar.navbar-inverse .nav-collapse .nav li a:hover{color:#fff;background-color:transparent}
+.navbar.navbar-inverse .nav-collapse.in .nav li.active a:hover{background-color:#204a90}
+.navbar.navbar-inverse .nav-collapse.in .nav li.active a{background-color:#204a90}
+.navbar.navbar-inverse .btn-navbar{background:-webkit-gradient(linear, left top, left bottom, color-stop(0, #204a90), color-stop(1, #1d4281));background:-webkit-linear-gradient(top, #204a90 0%, #1d4281 100%);background:-moz-linear-gradient(top, #204a90 0%, #1d4281 100%);background:-o-linear-gradient(top, #204a90 0%, #1d4281 100%);background:-ms-linear-gradient(top, #204a90 0%, #1d4281 100%);background:linear-gradient(top, #204a90 0%, #1d4281 100%)}
 .navbar .brand{color:#fff}
 form#question_ask input.question{font-size:2em;padding:.286em;margin:.286em;}
 .ask-question{text-align:center}
