--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -24,11 +24,13 @@ a {
 	
 	.brand {
 		color: white;
+		text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.5);
 	}
 	
-	.nav-collapse .nav li {
+	.nav-collapse .nav li {		
 		a {
 			color: pollapp_light_blue;
+			text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.45);
 			
 			&:hover {
 				color: white;
@@ -66,10 +68,6 @@ a {
 	}
 }
 
-/* Top Navbar style */
-.navbar 
-  .brand
-    color: #ffffff
 
 /* Forms */
 form#question_ask input.question
