--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -5,7 +5,7 @@ pollapp_blue = #224E98;
 pollapp_light_blue = #BDCAE0;
 
 body {
-  background-color: #ffffff;
+  background: #F0F0F0 url('../images/bg.png') top left repeat;
 }
 
 a {
