--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,6 +4,7 @@ html
     title= title
     meta(charset='utf-8')
     meta(name='viewport', content='device-width, initial-scale=1.0')
+    script(src='/libs/modernizr/modernizr.custom.22130.js')
     link(rel='stylesheet', href='/libs/bootstrap/css/bootstrap.min.css')
     style
       body {
