--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -1,24 +1,34 @@
 /* Color & style constants */
-pollapp_red = #c92235;
+pollapp_red = #964B46;
 pollapp_green = #a1cf32;
 pollapp_blue = #224E98;
 pollapp_light_blue = #BDCAE0;
 
 body {
   background: #F0F0F0 url('../images/bg.png') top left repeat;
+  padding-top: 60px;
+}
+
+@media (max-width: 767px) {
+  body {
+    padding-top: 0;
+  }
 }
 
 a {
   color: #00B7FF
 }
 
-@media (min-width: 980px) { 
-	padding-top: 90px;
+.btn.btn-primary {
+  background: linear-gradient(lighten(pollapp_red, 5%), pollapp_red);
 }
 
 /* Top Navbar style */
 .navbar.navbar-inverse {
+  margin-bottom: 0;
+
 	.navbar-inner {
+    border-radius(0);
 		background: linear-gradient(lighten(pollapp_blue, 5%), pollapp_blue);
 	}
 	
@@ -66,6 +76,58 @@ a {
 			padding-bottom: 20px;
 		}
 	}
+}
+
+/* The Big Question */
+article.question {
+  background-color: #E0E0E0;
+  border-bottom: 30px solid #D0D0D0;
+  padding: 90px 0;
+
+  header {
+    h1, h2, h3, h4, h5, h6 {
+      font-family: 'Crete Round', serif;
+      font-size: 5em;
+      text-align: center;
+      text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+      margin-bottom: 30px;
+    }
+  }
+
+  form {
+    input, button {
+      font-size: 2em;
+      padding-top: 1em;
+      padding-bottom: 1em;
+      line-height: 1em;
+      height: 1em;
+    }
+
+    button {
+      width: 100%;
+      padding: .5em 0;
+      vertical-align: top;
+      height: auto;
+    }
+  }
+}
+
+@media(max-width: 767px) {
+  article.question {
+    margin: 0 -20px;
+    padding: 20px;
+
+    header {
+      h1, h2, h3, h4, h5, h6 {
+        font-size: 3em;
+      }
+    }
+  }
+}
+
+.rgba article.question {
+  background-color: rgba(0, 0, 0, 0.05);
+  border-bottom-color: rgba(0, 0, 0, 0.1);
 }
 
 
