--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,6 +10,7 @@ html
       body {
         padding-top: 80px;
       }
+    link(href='http://fonts.googleapis.com/css?family=Crete+Round:400,400italic', rel='stylesheet', type='text/css')
     link(rel='stylesheet', href='/libs/bootstrap/css/bootstrap-responsive.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
     script(src='http://code.jquery.com/jquery-1.8.2.min.js')
@@ -33,8 +34,6 @@ html
               li
                 a(href='/questions') Trending Questions 
 
-    div(class="container")
+    include shared/notices
 
-      include shared/notices
-
-      block content
+    block content
