--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -5,7 +5,7 @@ pollapp_blue = #224E98;
 pollapp_light_blue = #BDCAE0;
 
 body {
-  background: #F0F0F0 url('../images/bg.png') top left repeat;
+  background: white;
   padding-top: 60px;
 }
 
@@ -80,8 +80,6 @@ a {
 
 /* The Big Question */
 article.question {
-  background-color: #E0E0E0;
-  border-bottom: 30px solid #D0D0D0;
   padding: 90px 0;
 
   header {
@@ -123,11 +121,6 @@ article.question {
       }
     }
   }
-}
-
-.rgba article.question {
-  background-color: rgba(0, 0, 0, 0.05);
-  border-bottom-color: rgba(0, 0, 0, 0.1);
 }
 
 
