map in results. we're in business.

--- a/views/results/show.jade
+++ b/views/results/show.jade
@@ -1,5 +1,14 @@
 extends ../layout
 
+block head
+  script(src='/libs/underscore/underscore-min.js')
+  script(src='/libs/backbone/backbone-min.js')
+  script(src='/libs/openlayers/build/ol.js')
+  script(src='/js/map.js')
+  link(rel='stylesheet', href='/libs/openlayers/build/ol.css', type='text/css')
+  
+
+
 block content
 
   div(class="row")
@@ -10,4 +19,7 @@ block content
           h2= 'Yes (' + yesWidth + ')'
         li(style="width:" + noWidth + "%;", class="answers no")
           h2= 'No (' + noWidth + ')'
+        .map
+          div(id="map")
+
 
