--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,4 @@
-body{background:#fff;padding-top:60px}
+body{background:#fff;padding:80px 25px 20px 25px}
 @media (max-width: 979px){body{padding-top:0}
 }a{color:#00b7ff}
 .btn.btn-primary{background:-webkit-gradient(linear, left top, left bottom, color-stop(0, #474747), color-stop(1, #262626));background:-webkit-linear-gradient(top, #474747 0%, #262626 100%);background:-moz-linear-gradient(top, #474747 0%, #262626 100%);background:-o-linear-gradient(top, #474747 0%, #262626 100%);background:-ms-linear-gradient(top, #474747 0%, #262626 100%);background:linear-gradient(top, #474747 0%, #262626 100%)}
