--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -7,7 +7,7 @@ pollapp_light_blue = #BDCAE0;
 
 body {
   background: white;
-  padding-top: 60px;
+  padding: 80px 25px 20px 25px;
 }
 
 @media (max-width: 979px) {
