--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -163,7 +163,7 @@ ul.answer_graph li
   margin: 0
   padding: 0
   list-style-type: none
-  position: absolute
+  float: left
   
 ul.answer_graph li h2
   padding: .5em
